--- a/Domus_App/app/templates/navbar.html
+++ b/Domus_App/app/templates/navbar.html
@@ -1,5 +1,3 @@
-{% set navigation_bar = [('router.index', 'index', 'Index')] -%}
-
 {% set active_page = active_page|default('index') -%}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -10,7 +8,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto justify-content-center">
         {% for href, id, caption in navigation_bar %}
         <li class="nav-item {% if id == active_page %}active{% endif %}">
           <a class="nav-link" href="{{ url_for(href|e) }}">{{caption|e}}</a>
