Updated listing part

--- a/Domus_App/app/templates/index.html
+++ b/Domus_App/app/templates/index.html
@@ -5,5 +5,7 @@ Index
 {% endblock %}
 
 {% block content %}
-<div> Hello World! </div>
+<div>
+    <h1 style="text-align: center;">Welcome to Domus Property Website!</h1>
+</div>
 {% endblock %}
