--- a/Domus_App/app/templates/navbar.html
+++ b/Domus_App/app/templates/navbar.html
@@ -1,4 +1,4 @@
-{% set navigation_bar = [('router.index', 'index', 'Index'), ('router.listings', 'listings', 'Buy')] -%}
+{% set navigation_bar = [('listings', 'index', 'Index'), ('listings', 'listings', 'Buy')] -%}
 
 {% set active_page = active_page|default('index') -%}
 
