--- a/Domus_App/app/templates/response.html
+++ b/Domus_App/app/templates/response.html
@@ -1,6 +1,7 @@
 
 {% for i in data %} 
-<h1>Filtered Data</h1>
+&nbsp;
+<br/>
 <div class="card mb-3 card-columns mx-auto d-flex justify-content-center col-12" style="width: 70rem;">
   <img src="{{i['s3_object_link']}}" style=" width: 100%; height: 15vw; object-fit: cover; background-size: cover;
   background-repeat: no-repeat;
